# MemoryProfiler

./: .gitignore  CMakeLists.txt  CMakeSettings.json
Gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
apps/calculadora/: CMakeLists.txt  Calculadora.cpp  Calculadora.h  Potencia.cpp  Potencia.h  main.cpp
apps/calculadora/include/: Calculadora.h  Potencia.h
apps/calculadora/src/: Calculadora.cpp  Potencia.cpp  main.cpp
apps/simulador/: CMakeLists.txt  chat.cpp  chat.h  contactos.cpp  contactos.h  main.cpp
apps/simulador/include/: chat.h  contactos.h
apps/simulador/src/: chat.cpp  contactos.cpp  main.cpp
profiler_lib/: CMakeLists.txt  SobrescribirOperador.cpp  config.h  json_serializer.cpp  json_serializer.h  profiler.cpp  profiler.h  socket_client.cpp  socket_client.h
profiler_lib/include/: config.h  json_serializer.h  profiler.h  socket_client.h
profiler_lib/src/: SobrescribirOperador.cpp  json_serializer.cpp  profiler.cpp  socket_client.cpp
